manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boutique-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service-svc
            port:
              number: 3001
      - path: /cart
        pathType: Prefix
        backend:
          service:
            name: cart-service-svc
            port:
              number: 3002
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: payment-service-svc
            port:
              number: 3003
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: payment-service-svc
            port:
              number: 3003
      - path: /notifications
        pathType: Prefix
        backend:
          service:
            name: notification-service-svc
            port:
              number: 3004
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: product-service-svc
            port:
              number: 3001
